updated about ureport slightly

--- a/solid/templates/index.html
+++ b/solid/templates/index.html
@@ -214,7 +214,7 @@
                   <p class="info">Technical Consultant <span>&bull;</span> <em class="date">January 2017 — November 2017</em></p>
 
                   <p>
-                     Provided technical support to UNICEF Nepal CO in development and deployment U-report platform as a part of Shout Out For Health program initiated by Bill &amp; Melinda Gates Foundation. U-report is a free, SMS-based system that allows young people use their mobile phones to speak out on what is happening in communities across their country, and work together with other community leaders and policy makers for positive change. These voices and opinions of young people is visualized in real-time on public website.
+                     Provided technical support to UNICEF Nepal CO in development and deployment U-report platform as a part of Shout Out For Health program initiated by Bill &amp; Melinda Gates Foundation. U-report is a free, SMS-based system that allows young people to speak out on what is happening in communities across their country using their mobile phones, and work together with other community leaders and policy makers for positive change. These voices and opinions of young people is visualized in real-time on public website.
                   </p>
 
                </div>
