--- a/solid/templates/cv.html
+++ b/solid/templates/cv.html
@@ -380,7 +380,7 @@
 					</h3>
 					<span class="clear"> </span>
 					<span class="job_title"><i>Technical Consultant</i></span>
-					<span class="info">Provided technical support to UNICEF Nepal CO in development and deployment U-report platform as a part of Shout Out For Health program initiated by Bill &amp; Melinda Gates Foundation. U-report is a free, SMS-based system that allows young people to speak out on what is happening in communities across their country using their mobile phones, and work together with other community leaders and policy makers for positive change. These voices and opinions of young people is visualized in real-time on public website.
+					<span class="info">Provided technical support to UNICEF Nepal CO in development and deployment U-report platform as a part of Shout Out For Health program initiated by Bill &amp; Melinda Gates Foundation. U-report is a free, SMS-based system that allows young people to speak out on what is happening in communities across their country using their mobile phones, and work together with other community leaders and policy makers for positive change. These voices and opinions of young people are visualized in real-time on public website.
 					</span><span class="clear"> </span>
 				</div>
 				<br>
